--- a/_layouts/methods.html
+++ b/_layouts/methods.html
@@ -28,7 +28,7 @@ layout: base
     </div>
     <div class="usa-width-three-fourths">
       <h3>Step 1: Partner with Federal Agencies to target priority outcomes</h3>
-      <p>This section will talk about serving the public, humbly collaborating, already established priority outcome measures.</p>
+      <p>Agencies maintain priorities through their Congressional Justifications, Annual Performance Plans, Strategic Plans, Agency Priority Goals, Cross-Agency Priority Goals, Learning Agendas, and many other planning efforts. In conversations with collaborators, we discuss the most important questions that need to be answered in order to improve program implementation and performance, and define a meaningful outcome at the start that we hope to move the needle on. Each project is then vetted for feasibility, proper planning, and potential impact for stakeholders in a Federal program or policy.</p>
       <p><a href="{{ '/assets/files/ProjectInitiation.pdf' | prepend: site.baseurl }}">Project Initiation Document</a></p>
     </div>
   </div>
@@ -38,7 +38,7 @@ layout: base
     </div>
     <div class="usa-width-three-fourths">
       <h3>Step 2: Translate evidence-based insights into concrete recommendations</h3>
-      <p>This section will talk about behavioral mapping, intervention design, literature review, etc.</p>
+      <p>Our collaborators, who are civil servants with years of experience working to deliver programs across the government, are the experts on how their programs work and often have the best ideas for how to improve them. OES team members support their efforts by bringing diverse backgrounds in the social sciences and an “evidence base” from their area of study to more deeply understand program bottlenecks, offering recommendations for improving government that have demonstrated success in peer-reviewed contexts using quantitative methods.</p>
       <p><a href="{{ '/assets/files/ProjectDesign.pdf' | prepend: site.baseurl }}">Project Design Document</a></p>
     </div>
   </div>
@@ -48,7 +48,8 @@ layout: base
     </div>
     <div class="usa-width-three-fourths">
       <h3>Step 3: Embed tests using randomized evaluations</h3>
-      <p>This section will talk about randomization, reproducibility.</p>
+      <p>One of the most important steps we take is committing to a detailed analysis plan before we begin working with data. As the recent replication crisis in the social sciences has shown, if scientists allow themselves too much flexibility in analyzing data they may inadvertently get results that are the result of “fishing” or “p-hacking.”  In our case, this would mean reporting “false positive” results that appear to indicate that a program or policy change was effective but instead reflect patterns or differences that appeared in the data by chance. To ensure that our positive results mean what they are supposed to mean, we commit to a detailed Analysis Plan before we analyze data — a best practice that has received greater attention in the social sciences in recent years. In particular, we commit ourselves to specific outcome variables and analytic methods, and we date-stamp the plan and post it on our website so that others can hold us accountable, other researchers can verify that our methods are sound, and policymakers can base decisions on our results with confidence.
+</p>
      <p><a href="{{ '/assets/files/AnalysisPlan.pdf' | prepend: site.baseurl }}">Analysis Plan Document</a></p>
     </div>
   </div>
@@ -58,7 +59,8 @@ layout: base
     </div>
     <div class="usa-width-three-fourths">
       <h3>Step 4: Analyze results utilizing exisitng administrative data</h3>
-      <p>This section will talk about randomization, reproducibility.</p>
+      <p>As OES seeks to embed tests into ongoing operations, new data collections are generally not an option as they can be costly, time-intensive, and can require extensive approval processes. However, administrative data collected by government entities for program administration, regulatory, or law enforcement purposes offer rich information that is often underutilized. Office of Management and Budget (OMB) Memorandum M-14-06, Guidance for Providing and Using Administrative Data for Statistical Purposes, promotes increased agency use of administrative data for evidence-building. OES team members work with agency partners to leverage existing data to measure the effect of a program change on a the priority outcome of interest.
+</p>
      <p><a href="{{ '/assets/files/RecordAnalysis.pdf' | prepend: site.baseurl }}">Record of Analysis Document</a></p>
     </div>
   </div>
@@ -68,7 +70,8 @@ layout: base
     </div>
     <div class="usa-width-three-fourths">
       <h3>Step 5: Ensure our work meets evaluation best practice</h3>
-      <p>This section will talk about RSS. Could also include description of "checks" - for badges</p>
+      <p>In keeping with our team’s commitment to reproducibility, before we finalize an analysis, we submit it to an internal replication that we call Reanalysis. This is done by asking an independent reanalyst — an analyst who does not know the results of the initial analysis  — to write new code to analyze the administrative data and generate results that address the study’s research objectives. Reanalysis serves as a check on (1) the computer code that the first analyst used to analyze the data, (2) any exploratory analyses that might have been conducted, and (3) any departures from the Analysis Plan that might have been necessary due to unanticipated features of the data.
+The reanalyst’s goal is to replicate the initial analysis from scratch, working only from the raw data and the Analysis Plan. It is important that the reanalyst not know the results of the initial analysis. Because we generally hold a team discussion of the initial analysis before Reanalysis occurs, we make sure that the reanalyst is recused from this discussion. Only when the reanalyst has finished do they look at the initial analyst’s write-up of results and findings.</p>
      <p><a href="{{ '/assets/files/RecordReanalysis.pdf' | prepend: site.baseurl }}">Record of Reanalysis Document</a></p>
     </div>
   </div>
@@ -78,7 +81,8 @@ layout: base
     </div>
     <div class="usa-width-three-fourths">
       <h3>Step 6: Measure impact and build evidence to continuously improve</h3>
-      <p>This section will talk about transparency, sharing for different types of audiences.</p>
+      <p>As part of our commitment to transparency and learning, OES shares all findings from every completed evaluation. This helps ensure federal collaborators can learn what works and what doesn’t, and also learn from each other’s experiences. Results which are surprising or run counter to our expectations are just as important to share and often offer valuable lessons. While we do aim to submit our work to peer-review publications, our first priority is producing materials that enable decision makers to quickly digest results and understand their implications. We designed a number of project summary documents - from high-level summaries, to one-page abstracts, to template presentations, that our agency collaborators can use to circulate among their program teams, peers, and leadership.
+</p>
      <p><a href="{{ '/assets/files/Abstract.pdf' | prepend: site.baseurl }}">Abstract Document</a></p>
     </div>
   </div>
